--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node dist/index.js",
     "dev": "nodemon",
     "test": "jest",
-    "build": "tsc"
+    "build": "CI=false tsc"
   },
   "keywords": [],
   "author": "",
